# ChangeLog for games-simulation/singularity
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/singularity/ChangeLog,v 1.1 2006/07/31 06:50:02 mr_bones_ Exp $

*singularity-0.24 (31 Jul 2006)

  31 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +singularity-0.24.ebuild:
  initial commit - ebuild submitted by Leszek via bug #130461
