@@ -1,12 +1,17 @@
 DIST singularity_0.24.tar.gz 465547 RMD160 452486f1c4a5c86879d58ade026c09b0842b67cc SHA1 843749abcaca4027cc38e024ffec50e6c4a40fd2 SHA256 39d5cb83d231a4d1f15a49c276908930109a1e9edc98f4d478d765bc35fd054a
+DIST singularity_0.25.tar.gz 468709 RMD160 e77e89153ca564af20d40520b55081604618fbb8 SHA1 edbd5013e8c79427d1e55da6eb880870455a0c40 SHA256 d32cab6e03d01f48b2f09adfaf9b245511820017991b26fd2472a93a3edd1ea3
 EBUILD singularity-0.24.ebuild 952 RMD160 f78ad307180ab62f611cb37e2ea39df55933312a SHA1 a01ed4c64b8e89638682f38a6e6cb0340069d990 SHA256 91dd22b4d12e09408d44a128d52a79fdf9ab876e1eb967038436e93e2427b320
 MD5 94ad82554dc8e0fcdadb46005e75efb6 singularity-0.24.ebuild 952
 RMD160 f78ad307180ab62f611cb37e2ea39df55933312a singularity-0.24.ebuild 952
 SHA256 91dd22b4d12e09408d44a128d52a79fdf9ab876e1eb967038436e93e2427b320 singularity-0.24.ebuild 952
-MISC ChangeLog 426 RMD160 8863893b635e2af4dc15d7c8a6803f2f7dcc8c66 SHA1 58d8483fc9ec2b22f1ef4d9c47d1ade8fbe21a17 SHA256 7af66de3947e0659f788e4f2e69716609145947f09b285691a42efca1fc92698
-MD5 d81f1269f6611597b1a789b74ad457b8 ChangeLog 426
-RMD160 8863893b635e2af4dc15d7c8a6803f2f7dcc8c66 ChangeLog 426
-SHA256 7af66de3947e0659f788e4f2e69716609145947f09b285691a42efca1fc92698 ChangeLog 426
+EBUILD singularity-0.25.ebuild 952 RMD160 d9c518cf7adea2ef0b2885715cf62dba111adbd9 SHA1 8c3810db9bb7108e6da08e724c08d2efab50a56e SHA256 6c9f82161a83ca0ea27ad611bd0a6b8f6bc44dd85feebcf79d03b018c96138fd
+MD5 a457cccf18a77eb4460713dc50df5b3f singularity-0.25.ebuild 952
+RMD160 d9c518cf7adea2ef0b2885715cf62dba111adbd9 singularity-0.25.ebuild 952
+SHA256 6c9f82161a83ca0ea27ad611bd0a6b8f6bc44dd85feebcf79d03b018c96138fd singularity-0.25.ebuild 952
+MISC ChangeLog 558 RMD160 f05efeedceec63d7390f0fb559ec706f0bf4a14d SHA1 4affd7b99fd6b3a4e8d8236a4431b016ace747ff SHA256 3b4347b57fe45ec710c60a0fe5e3d7b3b3f4cd95a02f57289260e602bf2ce0bc
+MD5 8a84aa48aa13201f19782956ced4d49a ChangeLog 558
+RMD160 f05efeedceec63d7390f0fb559ec706f0bf4a14d ChangeLog 558
+SHA256 3b4347b57fe45ec710c60a0fe5e3d7b3b3f4cd95a02f57289260e602bf2ce0bc ChangeLog 558
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
@@ -14,3 +19,6 @@ SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata
 MD5 251c6137f4c9686ee741c6231a779b92 files/digest-singularity-0.24 250
 RMD160 8a46d0fffd7e6720f3f569bfbff6588070af968b files/digest-singularity-0.24 250
 SHA256 e966bd8942bd2cc34e46924b16d12ab6dff36cf49d49fb6320cc8c869171b448 files/digest-singularity-0.24 250
+MD5 d93ebb45c4d84d6648f9ecedfa2b6ae6 files/digest-singularity-0.25 250
+RMD160 f4b37f35ea42712b3f0f87c2ebdd9f9431a98ed3 files/digest-singularity-0.25 250
+SHA256 4196306f993d45361e07f74cdd1292e038f13278ed0992ee52336da02e5442b3 files/digest-singularity-0.25 250
