@@ -1,0 +1,3 @@
+MD5 7dd3654c4e1dd34ba0d80e56bfa885f3 singularity_0.25.tar.gz 468709
+RMD160 e77e89153ca564af20d40520b55081604618fbb8 singularity_0.25.tar.gz 468709
+SHA256 d32cab6e03d01f48b2f09adfaf9b245511820017991b26fd2472a93a3edd1ea3 singularity_0.25.tar.gz 468709
