@@ -1,6 +1,12 @@
 # ChangeLog for games-simulation/singularity
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/singularity/ChangeLog,v 1.1 2006/07/31 06:50:02 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/singularity/ChangeLog,v 1.2 2006/08/14 06:45:52 mr_bones_ Exp $
+
+*singularity-0.25 (14 Aug 2006)
+
+  14 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
+  +singularity-0.25.ebuild:
+  version bump
 
 *singularity-0.24 (31 Jul 2006)
 
